--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ hs_err_pid*
 /ExamenMetodos/build/
 /Herencia_Empresa/nbproject/private/
 /Herencia_Empresa/build/
+/Punto_Santore/nbproject/private/
+/Punto_Santore/build/
