--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ hs_err_pid*
 /Herencia_Empresa/build/
 /Punto_Santore/nbproject/private/
 /Punto_Santore/build/
+/KarinaAguilar_Calendario/nbproject/private/
+/KarinaAguilar_Calendario/build/
+/KarinaAguilar_Calendario/dist/
