--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ hs_err_pid*
 /KarinaAguilar_Calendario/nbproject/private/
 /KarinaAguilar_Calendario/build/
 /KarinaAguilar_Calendario/dist/
+/Pelota_DiegoJimenez/nbproject/private/
+/KarinaAguilar_Matriz/nbproject/private/
+/KarinaAguilar_Matriz/build/
